objects/Product_Subtypes_to_Pillar__c.object
<CustomObject>
    <fields>
        <fullName>Pillar__c</fullName>
        <label>Pillar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Collaborative Classroom</fullName>
                </value>
                <value>
                    <fullName>Content Exchange</fullName>
                    <label>Culture &amp; Wellness</label>
                </value>
                <value>
                    <fullName>Data Driven Instruction</fullName>
                    <label>Instructional Resources</label>
                </value>
                <value>
                    <fullName>Learning Enablement</fullName>
                    <label>Personalized Learning</label>
                </value>
                <value>
                    <fullName>Traditional Supplies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Subtype__c</fullName>
        <label>Product Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Branding/Fundraising</fullName>
                </value>
                <value>
                    <fullName>CPD Instructional Materials</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Parental Engagement</fullName>
                </value>
                <value>
                    <fullName>Professional Development</fullName>
                </value>
                <value>
                    <fullName>School Assessment</fullName>
                </value>
                <value>
                    <fullName>Student Coaching</fullName>
                </value>
                <value>
                    <fullName>Supplemental Materials</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Traditional Supplies</fullName>
                </value>
                <value>
                    <fullName>Watson for Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Supplies</fullName>
                </value>
                <value>
                    <fullName>CPD-Print</fullName>
                </value>
                <value>
                    <fullName>CPD-Promo</fullName>
                </value>
                <value>
                    <fullName>Furniture - Catalog</fullName>
                </value>
                <value>
                    <fullName>Furniture - Interiors</fullName>
                </value>
                <value>
                    <fullName>Ink &amp; Toner</fullName>
                </value>
                <value>
                    <fullName>Instructional Solutions</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Office Essentials</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Catalog Furniture</fullName>
                </value>
                <value>
                    <fullName>Print Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watson__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Watson</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Subtypes to Pillar</label>
    <listViews>
        <fullName>Product_Subtypes_to_Pillar_Full_Rec_View</fullName>
        <columns>NAME</columns>
        <columns>Pillar__c</columns>
        <columns>Product__c</columns>
        <columns>Product_Subtype__c</columns>
        <columns>Watson__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Product Subtypes to Pillar Full Rec View</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Product Subtypes to Pillar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Subtypes to Pillar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>